# anchor-by-example

./: README.md  package-lock.json  package.json
programs/jobs/: .gitignore  Anchor.toml  Cargo.toml  package.json  tsconfig.json
programs/jobs/programs/jobs/: Cargo.toml
programs/jobs/programs/jobs/src/: lib.rs
programs/jobs/programs/jobs/src/error_codes/: errors.rs
programs/jobs/programs/jobs/src/instructions/applicant/: create_applicant_profile.rs  mod.rs
programs/jobs/programs/jobs/src/instructions/application/: apply_to_job_listing.rs  mod.rs
programs/jobs/programs/jobs/src/instructions/company/: register_company.rs  remove_company.rs
programs/jobs/programs/jobs/src/instructions/job_listing/: close_job_listing.rs
programs/jobs/programs/jobs/src/states/: application.rs  job_listing.rs
programs/jobs/src/instructions/: mod.rs
programs/jobs/src/instructions/application/: remove_application_to_job_listing.rs
programs/jobs/src/instructions/company/: mod.rs
programs/jobs/src/instructions/job_listing/: create_job_listing.rs  edit_job_listing.rs  mod.rs
programs/jobs/src/states/: applicant.rs  company.rs  mod.rs
programs/jobs/src/utils/: helpers.rs  mod.rs
programs/jobs/tests/: helpers.ts  jobs.ts  test-fixtures.ts
programs/jobs/tests/pdas/: index.ts  pdas.ts
programs/jobs/tests/unit-tests/: applicant.ts  application.ts  company.ts  job_listing.ts
programs/non-custodial-escrow/programs/non-custodial-escrow/: Cargo.toml
programs/non-custodial-escrow/programs/non-custodial-escrow/src/: lib.rs
programs/onchain-voting/programs/onchain-voting/: Cargo.toml
programs/onchain-voting/programs/onchain-voting/src/: lib.rs
programs/prediction system using oracle/programs/pyth_stake/: Cargo.toml
programs/prediction system using oracle/programs/pyth_stake/src/: lib.rs
(+60 files in other folders)
